--- a/css/main.css
+++ b/css/main.css
@@ -46,6 +46,32 @@ table {
   border-spacing: 0; }
 
 * {
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  font-family: "DIN Pro Condensed Regular"; }
+
+@font-face {
+  font-family: 'DIN Pro Condensed Regular';
+  font-style: normal;
+  font-weight: normal;
+  src: local("DIN Pro Condensed Regular"), url("DINPro-Cond.woff") format("woff"); }
+.container {
+  width: 100vw;
+  height: 100vh;
+  border: 1px solid blue; }
+
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0 auto;
+  width: 400px;
+  height: 100px;
+  border: 1px solid red; }
+  nav img {
+    width: 100px; }
+  nav span {
+    font-family: "DIN Pro Condensed Regular";
+    margin-left: 20px;
+    border: 1px solid yellow; }
 
 /*# sourceMappingURL=main.css.map */
