add header for mobile

--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -1,11 +1,18 @@
-* {
-  box-sizing: border-box;
-  font-family: $font-stack;
+@font-face {
+  font-family: 'DIN Pro Condensed Regular';
+  font-style: normal;
+  font-weight: normal;
+  src: local('DIN Pro Condensed Regular'), url('../fonts/DINPro-Cond.woff') format('woff');
 }
 
-@font-face {
-font-family: 'DIN Pro Condensed Regular';
-font-style: normal;
-font-weight: normal;
-src: local('DIN Pro Condensed Regular'), url('DINPro-Cond.woff') format('woff');
+* {
+  box-sizing: border-box;
+  a {
+    text-decoration: none;
+    color: black;
+  }
+}
+.container {
+  font-family: $font-stack;
+
 }
