--- a/scss/utils/_variables.scss
+++ b/scss/utils/_variables.scss
@@ -1,2 +1,7 @@
 ////fonts
-$font-stack: 'DIN Pro Condensed Regular';
+$font-stack: 'DIN Pro Condensed Regular', monospace;
+
+
+//////colors
+
+$color-blue: #6683E1;
