--- a/css/main.css
+++ b/css/main.css
@@ -45,15 +45,20 @@ table {
   border-collapse: collapse;
   border-spacing: 0; }
 
-* {
-  box-sizing: border-box;
-  font-family: "DIN Pro Condensed Regular"; }
-
 @font-face {
   font-family: 'DIN Pro Condensed Regular';
   font-style: normal;
   font-weight: normal;
-  src: local("DIN Pro Condensed Regular"), url("DINPro-Cond.woff") format("woff"); }
+  src: local("DIN Pro Condensed Regular"), url("../fonts/DINPro-Cond.woff") format("woff"); }
+* {
+  box-sizing: border-box; }
+  * a {
+    text-decoration: none;
+    color: black; }
+
+.container {
+  font-family: "DIN Pro Condensed Regular", monospace; }
+
 .container {
   width: 100vw;
   height: 100vh;
@@ -65,13 +70,39 @@ nav {
   align-items: center;
   margin: 0 auto;
   width: 400px;
-  height: 100px;
-  border: 1px solid red; }
+  height: 100px; }
   nav img {
     width: 100px; }
-  nav span {
-    font-family: "DIN Pro Condensed Regular";
+  nav a, nav span {
+    font-family: 'DIN Pro Condensed Regular';
     margin-left: 20px;
-    border: 1px solid yellow; }
+    font-size: 2em; }
+
+header {
+  border: 1px solid red;
+  width: 100%;
+  height: 500px;
+  display: flex;
+  flex-flow: column;
+  justify-content: center; }
+  header img {
+    width: auto;
+    height: 200px;
+    align-self: center; }
+  header p {
+    text-align: right;
+    padding: 0 20px;
+    font-size: 1.8em; }
+
+.work {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid black;
+  height: 50px;
+  width: 100%; }
+  .work h2 {
+    align-self: center;
+    font-size: 2em; }
 
 /*# sourceMappingURL=main.css.map */
