--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -11,14 +11,32 @@ nav {
   margin: 0 auto;
   width: 400px;
   height: 100px;
-  border: 1px solid red;
   img {
     width: 100px;
   }
-  span {
-    font-family: $font-stack;
+  a, span {
+    font-family: 'DIN Pro Condensed Regular';
     margin-left: 20px;
-    border: 1px solid yellow;
+    font-size: 2em;
 
+  }
+}
+
+header {
+  border: 1px solid red;
+  width: 100%;
+  height: 500px;
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  img {
+    width: auto;
+    height: 200px;
+    align-self: center;
+  }
+  p {
+    text-align: right;
+    padding: 0 20px;
+    font-size: 1.8em;
   }
 }
