--- a/scss/utils/_variables.scss
+++ b/scss/utils/_variables.scss
@@ -4,4 +4,12 @@ $font-stack: 'DIN Pro Condensed Regular', monospace;
 
 //////colors
 
-$color-blue: #6683E1;
+$mid-blue: #6683E1;
+
+$bright-blue: #1944D8;
+
+$light-blue: #8AA0E8;
+
+$dark-grey: #232C33;
+
+$text-color: #4A4A4A;
