add contact content along with about

--- a/css/main.css
+++ b/css/main.css
@@ -98,7 +98,8 @@ header {
   flex-flow: column;
   justify-content: center;
   align-content: center;
-  width: 100%; }
+  width: 100%;
+  margin-bottom: 25px; }
   .heading h2 {
     align-self: center;
     width: 100%;
@@ -115,7 +116,25 @@ header {
 
 .about-content {
   border: 2px solid red;
-  height: 300px;
-  width: 100%; }
+  width: 100%;
+  display: flex;
+  flex: row wrap; }
+  .about-content p {
+    font-size: 2em; }
+  .about-content img {
+    width: 50%;
+    height: 50%; }
+
+.contact-content {
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  align-items: center; }
+  .contact-content #email {
+    font-size: 2em;
+    margin: 20px 0; }
+  .contact-content .icons a img {
+    margin: 10px 20px;
+    width: 50px; }
 
 /*# sourceMappingURL=main.css.map */
