--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,8 +1,4 @@
-.container {
-  width: 100vw;
-  border: 1px solid blue;
 
-}
 nav {
   display: flex;
   justify-content: space-between;
@@ -37,5 +33,6 @@ header {
     text-align: right;
     padding: 0 20px;
     font-size: 1.8em;
+    @extend %text;
   }
 }
