--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -10,17 +10,15 @@ nav {
     width: 100px;
   }
   a, span {
-    font-family: 'DIN Pro Condensed Regular';
+    font-family: $font-stack;
     margin-left: 20px;
     font-size: 2em;
-
   }
 }
 
 header {
-  border: 1px solid red;
   width: 100%;
-  height: 500px;
+  height: 100vh;
   display: flex;
   flex-flow: column;
   justify-content: center;
