--- a/scss/utils/_variables.scss
+++ b/scss/utils/_variables.scss
@@ -13,6 +13,9 @@ $dark-grey: #232C33;
 
 $text-color: #4A4A4A;
 
+$neon-color: #EEB7DB;
+
+$shadow-color: #DC00A0;
 
 %text {
   font-family: $text-font;
@@ -29,4 +32,38 @@ $text-color: #4A4A4A;
   color: $mid-blue;
   padding-top: 8px;
   font-family: $font-stack;
+}
+
+@keyframes blink {
+0% { opacity: 0; }
+
+  // flicker
+  5%  { opacity: 0; }
+  6% { opacity: 1; }
+  11% { opacity: .4; }
+  11.25% { opacity: .6; }
+  11.5% { opacity: .4; }
+  18% { opacity: 1; }
+  18.5% { opacity: .9; }
+  22% { opacity: 1; }
+
+   // flicker
+  38.5% { opacity: 1; }
+  39% { opacity: .8; }
+  42% { opacity: 1; }
+
+  // flicker
+  60% { opacity: 1; }
+  60.5% { opacity: 0; }
+  62% { opacity: 0; }
+  63% { opacity: .2; }
+  63.25% { opacity: 0; }
+  65% { opacity: 1; }
+
+  // flicker
+  73% { opacity: 1; }
+  75% { opacity: .8; }
+  79% { opacity: 1; }
+
+  100% { opacity: 1; }
 }
