--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -1,9 +1,15 @@
+
 @font-face {
   font-family: 'DIN Pro Condensed Regular';
   font-style: normal;
   font-weight: normal;
   src: local('DIN Pro Condensed Regular'), url('../fonts/DINPro-Cond.woff') format('woff');
 }
+
+ @font-face {
+   font-family: 'Neon Lights';
+   src: url('../fonts/NEON LIGHTS.tff') format('tff');
+ }
 @font-face {
   font-family: "Hiragino Sans GB W3";
   src: url("3b2646a48566403a55f62ceddbecbe18.eot"); /* IE9*/
