--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -3,8 +3,8 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 0 auto;
-  width: 400px;
+  margin: 20px auto 0 auto;
+  width: 80%;
   height: 100px;
   img {
     width: 100px;
@@ -12,25 +12,44 @@ nav {
   a, span {
     font-family: $font-stack;
     margin-left: 20px;
-    font-size: 2em;
+    font-size: 3em;
   }
 }
 
 header {
-  width: 100%;
+  width: 50%;
   height: 100vh;
+  margin: 0 auto;
   display: flex;
   flex-flow: column;
   justify-content: center;
-  img {
-    width: auto;
-    height: 200px;
-    align-self: center;
+  // align-content: center;
+  // img {
+  //   width: auto;
+  //   height: 200px;
+  //   align-self: center;
+  // }
+  #hello {
+    padding-left: 15px;
+    font-size: 8rem;
+    color: transparent;
+    -webkit-text-stroke-width: 2px;
+    -webkit-text-stroke-color: $neon-color;
+    font-family: 'Neon Lights', sans-serif;
+    text-shadow: 1px 1px 2px $shadow-color, 0 0 0.2em lighten($shadow-color, 10%), 0 0 1em lighten($shadow-color, 20%), 0px -15px 20px lighten($shadow-color, 20%);
+    // 0 -40px 100px, 0 0 2px, 0 0 1em $shadow-color, 0 0 0.5em $shadow-color, 0 0 0.1em $shadow-color;
+    animation: blink linear 5s;
   }
   p {
     text-align: right;
     padding: 0 20px;
-    font-size: 1.8em;
+    font-size: 2em;
     @extend %text;
+  }
+  a, img {
+    width: 100px;
+    height: 50px;
+    align-self: center;
+    margin-top: 20%;
   }
 }
