--- a/css/main.css
+++ b/css/main.css
@@ -134,39 +134,51 @@ nav {
   align-items: center;
   margin: 20px auto 0 auto;
   width: 80%;
-  height: 100px; }
+  height: 100px;
+  max-width: 800px; }
   nav img {
+    display: none;
     width: 100px; }
+    @media screen and (min-width: 414px) {
+      nav img {
+        display: block; } }
   nav a, nav span {
     font-family: "DIN Pro Condensed Regular", monospace;
     margin-left: 20px;
-    font-size: 3em; }
+    font-size: 1.5em; }
+    @media screen and (min-width: 800px) {
+      nav a, nav span {
+        font-size: 2em; } }
 
 header {
-  width: 50%;
+  width: 70%;
   height: 100vh;
   margin: 0 auto;
   display: flex;
   flex-flow: column;
   justify-content: center; }
+  @media screen and (min-width: 500px) {
+    header {
+      width: 500px; } }
   header #hello {
     padding-left: 15px;
-    font-size: 8rem;
+    font-size: 5rem;
     color: transparent;
     -webkit-text-stroke-width: 2px;
     -webkit-text-stroke-color: #EEB7DB;
     font-family: 'Neon Lights', sans-serif;
     text-shadow: 1px 1px 2px #DC00A0, 0 0 0.2em #ff10be, 0 0 1em #ff43cc, 0px -15px 20px #ff43cc;
     animation: blink linear 5s; }
+    @media screen and (min-width: 800px) {
+      header #hello {
+        font-size: 8em; } }
   header p {
     text-align: right;
     padding: 0 20px;
-    font-size: 2em; }
-  header a, header img {
-    width: 100px;
-    height: 50px;
+    font-size: 1.8em; }
+  header a {
     align-self: center;
-    margin-top: 20%; }
+    margin-top: 40%; }
 
 .heading {
   display: flex;
