--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -6,50 +6,55 @@ nav {
   margin: 20px auto 0 auto;
   width: 80%;
   height: 100px;
+  max-width: 800px;
   img {
+    display: none;
     width: 100px;
+    @media screen and (min-width: 414px) {
+      display: block;
+    }
   }
   a, span {
     font-family: $font-stack;
     margin-left: 20px;
-    font-size: 3em;
+    font-size: 1.5em;
+    @media screen and (min-width: 800px) {
+      font-size: 2em;
+    }
   }
 }
 
 header {
-  width: 50%;
+  width: 70%;
   height: 100vh;
   margin: 0 auto;
   display: flex;
   flex-flow: column;
   justify-content: center;
-  // align-content: center;
-  // img {
-  //   width: auto;
-  //   height: 200px;
-  //   align-self: center;
-  // }
+  @media  screen and (min-width: 500px) {
+    width: 500px;
+  }
   #hello {
     padding-left: 15px;
-    font-size: 8rem;
+    font-size: 5rem;
     color: transparent;
     -webkit-text-stroke-width: 2px;
     -webkit-text-stroke-color: $neon-color;
     font-family: 'Neon Lights', sans-serif;
     text-shadow: 1px 1px 2px $shadow-color, 0 0 0.2em lighten($shadow-color, 10%), 0 0 1em lighten($shadow-color, 20%), 0px -15px 20px lighten($shadow-color, 20%);
-    // 0 -40px 100px, 0 0 2px, 0 0 1em $shadow-color, 0 0 0.5em $shadow-color, 0 0 0.1em $shadow-color;
     animation: blink linear 5s;
+    @media screen and (min-width: 800px) {
+      font-size: 8em;
+    }
   }
   p {
     text-align: right;
     padding: 0 20px;
-    font-size: 2em;
+    font-size: 1.8em;
     @extend %text;
   }
-  a, img {
-    width: 100px;
-    height: 50px;
+  a {
     align-self: center;
-    margin-top: 20%;
+    margin-top: 40%;
   }
 }
