--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -34,19 +34,48 @@ header {
   @media  screen and (min-width: 500px) {
     width: 500px;
   }
-  #hello {
-    padding-left: 15px;
-    font-size: 5rem;
-    color: transparent;
-    -webkit-text-stroke-width: 2px;
-    -webkit-text-stroke-color: $neon-color;
-    font-family: 'Neon Lights', sans-serif;
-    text-shadow: 1px 1px 2px $shadow-color, 0 0 0.2em lighten($shadow-color, 10%), 0 0 1em lighten($shadow-color, 20%), 0px -15px 20px lighten($shadow-color, 20%);
-    animation: blink linear 5s;
-    @media screen and (min-width: 800px) {
-      font-size: 8em;
+  .neonSign {
+    position: relative;
+    display: flex;
+    #hello {
+      padding-left: 15px;
+      font-size: 5rem;
+      color: transparent;
+      -webkit-text-stroke-width: 2px;
+      -webkit-text-stroke-color: $neon-color;
+      font-family: 'Neon Lights', sans-serif;
+      text-shadow: 1px 1px 2px $shadow-color, 0 0 0.2em lighten($shadow-color, 10%), 0 0 1em lighten($shadow-color, 20%), 0px -15px 20px lighten($shadow-color, 20%);
+      animation: blink linear 5s;
+      @media screen and (min-width: 800px) {
+        font-size: 8em;
+      }
     }
+    #h {
+      padding-left: 15px;
+      font-size: 5rem;
+      color: transparent;
+      -webkit-text-stroke-width: 2px;
+      -webkit-text-stroke-color: $neon-color;
+      font-family: 'Neon Lights', sans-serif;
+      text-shadow: 1px 1px 2px $shadow-color, 0 0 0.2em lighten($shadow-color, 10%), 0 0 1em lighten($shadow-color, 20%), 0px -15px 20px lighten($shadow-color, 20%);
+      animation: blink2 linear 5s;
+      @media screen and (min-width: 800px) {
+        font-size: 8em;
+      }
+    }
+    #backgroundText {
+      position: absolute;
+      top: 0;
+      left: 0;
+      padding-left: 15px;
+      font-size: 5rem;
+      font-family: $hello-font;
+      opacity: 0.25;
+      color: $light-grey;
+    }
+
   }
+
   p {
     text-align: right;
     padding: 0 20px;
@@ -56,5 +85,14 @@ header {
   a {
     align-self: center;
     margin-top: 40%;
+    img {
+      animation-play-state: paused;
+    }
+    img:hover {
+    -webkit-animation: bounce 2.5s;
+    animation: bounce 2.5s ease-in-out;
+    animation-iteration-count: 2;
+    animation-play-state: playing;
+    }
   }
 }
