--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -37,28 +37,19 @@ header {
   .neonSign {
     position: relative;
     display: flex;
+    audio {
+      display: none;
+    }
     #hello {
-      padding-left: 15px;
-      font-size: 5rem;
-      color: transparent;
-      -webkit-text-stroke-width: 2px;
-      -webkit-text-stroke-color: $neon-color;
-      font-family: 'Neon Lights', sans-serif;
-      text-shadow: 1px 1px 2px $shadow-color, 0 0 0.2em lighten($shadow-color, 10%), 0 0 1em lighten($shadow-color, 20%), 0px -15px 20px lighten($shadow-color, 20%);
-      animation: blink linear 5s;
+    @extend %hello;
+      animation: blink linear 4s;
       @media screen and (min-width: 800px) {
         font-size: 8em;
       }
     }
     #h {
-      padding-left: 15px;
-      font-size: 5rem;
-      color: transparent;
-      -webkit-text-stroke-width: 2px;
-      -webkit-text-stroke-color: $neon-color;
-      font-family: 'Neon Lights', sans-serif;
-      text-shadow: 1px 1px 2px $shadow-color, 0 0 0.2em lighten($shadow-color, 10%), 0 0 1em lighten($shadow-color, 20%), 0px -15px 20px lighten($shadow-color, 20%);
-      animation: blink2 linear 5s;
+      @extend %hello;
+      animation: blink2 linear 4s;
       @media screen and (min-width: 800px) {
         font-size: 8em;
       }
@@ -72,6 +63,9 @@ header {
       font-family: $hello-font;
       opacity: 0.25;
       color: $light-grey;
+      @media screen and (min-width: 800px) {
+        font-size: 8em;
+      }
     }
 
   }
