--- a/css/main.css
+++ b/css/main.css
@@ -60,49 +60,26 @@ table {
   padding-top: 8px;
   font-family: "DIN Pro Condensed Regular", monospace; }
 
+header .neonSign #hello, header .neonSign #h {
+  padding-left: 15px;
+  font-size: 5rem;
+  color: transparent;
+  -webkit-text-stroke-width: 2px;
+  -webkit-text-stroke-color: #EEB7DB;
+  font-family: 'Neon Lights', sans-serif;
+  text-shadow: 1px 1px 2px #DC00A0, 0 0 0.2em #ff10be, 0 0 1em #ff43cc, 0px -15px 20px #ff43cc; }
+
 @keyframes blink {
   0% {
     opacity: 0; }
-  5% {
-    opacity: 0; }
-  6% {
-    opacity: 1; }
-  11% {
-    opacity: .4; }
-  11.25% {
-    opacity: .6; }
-  11.5% {
-    opacity: .4; }
-  18% {
-    opacity: 1; }
-  18.5% {
-    opacity: .9; }
-  22% {
-    opacity: 1; }
-  38.5% {
-    opacity: 1; }
-  39% {
-    opacity: .8; }
-  42% {
-    opacity: 1; }
-  60% {
-    opacity: 1; }
-  60.5% {
-    opacity: 0; }
-  62% {
-    opacity: 0; }
-  63% {
-    opacity: .2; }
-  63.25% {
-    opacity: 0; }
   65% {
     opacity: 1; }
-  73% {
-    opacity: 1; }
-  75% {
-    opacity: .8; }
+  66% {
+    opacity: 0; }
   79% {
     opacity: 1; }
+  80% {
+    opacity: 0; }
   100% {
     opacity: 1; } }
 @keyframes blink2 {
@@ -186,27 +163,15 @@ header {
   header .neonSign {
     position: relative;
     display: flex; }
+    header .neonSign audio {
+      display: none; }
     header .neonSign #hello {
-      padding-left: 15px;
-      font-size: 5rem;
-      color: transparent;
-      -webkit-text-stroke-width: 2px;
-      -webkit-text-stroke-color: #EEB7DB;
-      font-family: 'Neon Lights', sans-serif;
-      text-shadow: 1px 1px 2px #DC00A0, 0 0 0.2em #ff10be, 0 0 1em #ff43cc, 0px -15px 20px #ff43cc;
-      animation: blink linear 5s; }
+      animation: blink linear 4s; }
       @media screen and (min-width: 800px) {
         header .neonSign #hello {
           font-size: 8em; } }
     header .neonSign #h {
-      padding-left: 15px;
-      font-size: 5rem;
-      color: transparent;
-      -webkit-text-stroke-width: 2px;
-      -webkit-text-stroke-color: #EEB7DB;
-      font-family: 'Neon Lights', sans-serif;
-      text-shadow: 1px 1px 2px #DC00A0, 0 0 0.2em #ff10be, 0 0 1em #ff43cc, 0px -15px 20px #ff43cc;
-      animation: blink2 linear 5s; }
+      animation: blink2 linear 4s; }
       @media screen and (min-width: 800px) {
         header .neonSign #h {
           font-size: 8em; } }
@@ -219,6 +184,9 @@ header {
       font-family: "Neon Lights", sans-serif;
       opacity: 0.25;
       color: #e9e9e9; }
+      @media screen and (min-width: 800px) {
+        header .neonSign #backgroundText {
+          font-size: 8em; } }
   header p {
     text-align: right;
     padding: 0 20px;
@@ -251,17 +219,20 @@ header {
   width: 100%;
   display: flex;
   flex-flow: row wrap;
-  justify-content: center; }
+  justify-content: center;
+  max-width: 600px;
+  margin: 0 auto; }
   .about-content p, .about-content h3 {
     font-size: 1.25em;
     line-height: 1.2;
     padding: 10px; }
   .about-content ul {
     line-height: 1.2; }
-  .about-content img {
+  .about-content #mao {
     align-self: center;
     width: 50%;
     height: 50%;
+    max-width: 200px;
     border-radius: 50%;
     border: 6px solid #232C33; }
 
@@ -300,14 +271,15 @@ header {
   flex-flow: column;
   justify-content: center;
   align-items: center; }
+  .contact-content p {
+    padding: 20px 10px;
+    font-size: 1.2em;
+    font-weight: bold; }
   .contact-content #email {
     font-size: 1.5em;
     margin: 20px 0;
     transition: all 0.5s ease-in-out; }
   .contact-content #email:hover {
     color: #1944D8; }
-  .contact-content .icons a img {
-    margin: 10px 20px;
-    width: 50px; }
 
 /*# sourceMappingURL=main.css.map */
