--- a/scss/utils/_variables.scss
+++ b/scss/utils/_variables.scss
@@ -37,38 +37,23 @@ $light-grey: #e9e9e9;
   font-family: $font-stack;
 }
 
+ %hello {
+   padding-left: 15px;
+   font-size: 5rem;
+   color: transparent;
+   -webkit-text-stroke-width: 2px;
+   -webkit-text-stroke-color: $neon-color;
+   font-family: 'Neon Lights', sans-serif;
+   text-shadow: 1px 1px 2px $shadow-color, 0 0 0.2em lighten($shadow-color, 10%), 0 0 1em lighten($shadow-color, 20%), 0px -15px 20px lighten($shadow-color, 20%);
+ }
+
 @keyframes blink {
 0% { opacity: 0; }
-
-  // flicker
-  5%  { opacity: 0; }
-  6% { opacity: 1; }
-  11% { opacity: .4; }
-  11.25% { opacity: .6; }
-  11.5% { opacity: .4; }
-  18% { opacity: 1; }
-  18.5% { opacity: .9; }
-  22% { opacity: 1; }
-
-   // flicker
-  38.5% { opacity: 1; }
-  39% { opacity: .8; }
-  42% { opacity: 1; }
-
-  // flicker
-  60% { opacity: 1; }
-  60.5% { opacity: 0; }
-  62% { opacity: 0; }
-  63% { opacity: .2; }
-  63.25% { opacity: 0; }
-  65% { opacity: 1; }
-
-  // flicker
-  73% { opacity: 1; }
-  75% { opacity: .8; }
-  79% { opacity: 1; }
-
-  100% { opacity: 1; }
+65% { opacity: 1; }
+66% { opacity: 0; }
+79% { opacity: 1; }
+80% { opacity: 0; }
+100% { opacity: 1; }
 }
 
 @keyframes blink2 {
