--- a/scss/layout/_about.scss
+++ b/scss/layout/_about.scss
@@ -37,6 +37,7 @@
 .icons {
   display: flex;
   justify-content: center;
+  margin-top: 50px;
   border-top: 1px solid $dark-grey;
   a {
     padding: 10px 10px 0 10px;
