--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,5 +1,6 @@
 @import "vendors/reset";
 @import "utils/variables";
+@import "utils/keyframes";
 @import "base/base";
 @import "layout/header";
 @import "layout/work";
