--- a/scss/layout/_about.scss
+++ b/scss/layout/_about.scss
@@ -52,43 +52,24 @@
     color: $bright-blue;
   }
 }
-
-.skills {
-  text-align: center;
-  display: flex;
-  flex-flow: column;
-  h3{
-    color: $bright-blue;
-    font-size: 2em;
-  }
-  ul {
-    margin: 5px;
-    display: flex;
-  }
-  .js {
-    display: flex;
-    flex-flow: column;
-    li {
-      align-self: flex-start;
-    }
-  }
-}
-.contact-content {
-  display: flex;
-  flex-flow: column;
-  justify-content: center;
-  align-items: center;
-  p {
-    padding: 20px 10px;
-    font-size: 1.2em;
-    font-weight: bold;
-  }
-  #email {
-    font-size: 1.5em;
-    margin: 20px 0;
-    transition: all 0.5s ease-in-out;
-  }
-  #email:hover {
-    color: $bright-blue;
-  }
-}
+//
+// .skills {
+//   text-align: center;
+//   display: flex;
+//   flex-flow: column;
+//   h3{
+//     color: $bright-blue;
+//     font-size: 2em;
+//   }
+//   ul {
+//     margin: 5px;
+//     display: flex;
+//   }
+//   .js {
+//     display: flex;
+//     flex-flow: column;
+//     li {
+//       align-self: flex-start;
+//     }
+//   }
+// }
