--- a/scss/layout/_contact.scss
+++ b/scss/layout/_contact.scss
@@ -1,4 +1,6 @@
+
 .contact-content {
+  width: 100%;
   margin: 10% 0;
   display: flex;
   flex-flow: column;
@@ -16,5 +18,14 @@
   }
   #email:hover {
     color: $bright-blue;
+  }
+}
+
+#contact-image {
+  @media  screen and (min-width: 759px) {
+    align-self: center;
+    width: 200px;
+    height: auto;
+    z-index: 999;
   }
 }
