--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,6 +2,7 @@
 @import "utils/variables";
 @import "utils/keyframes";
 @import "base/base";
+@import "layout/nav";
 @import "layout/header";
 @import "layout/work";
 @import "layout/about";
