--- a/scss/utils/_variables.scss
+++ b/scss/utils/_variables.scss
@@ -1,6 +1,6 @@
 ////fonts
 $font-stack: 'DIN Pro Condensed Regular', monospace;
-$text-font: 'Roboto', sans-serif;
+$text-font: 'Colab Light', sans-serif;
 $hello-font: 'Neon Lights', sans-serif;;
 //////colors
 
@@ -24,7 +24,7 @@ $light-grey: #e9e9e9;
 
 %text {
   font-family: $text-font;
-  font-weight: 100;
+  font-weight: 200;
 }
 
 %heading {
