--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -8,7 +8,7 @@
 
  @font-face {
    font-family: 'Neon Lights';
-   src: url('../fonts/NEON LIGHTS.tff') format('tff');
+   src: url('../fonts/neon-lights.regular.tff') format('tff');
  }
 
 
