--- a/scss/layout/_work.scss
+++ b/scss/layout/_work.scss
@@ -31,6 +31,7 @@
   justify-content: space-around;
   align-items: center;
   max-width: 590px;
+  margin: 0 auto;
   a img {
     padding: 20px;
     @media screen and (min-width: 760px) {
