--- a/scss/utils/_variables.scss
+++ b/scss/utils/_variables.scss
@@ -16,7 +16,7 @@ $dark-blue: #112739;
 
 $text-color: #4A4A4A;
 
-$neon-color: #EEB7DB;
+$neon-color: #E48EC6;
 
 $shadow-color: #DC00A0;
 
@@ -42,9 +42,10 @@ $light-grey: #e9e9e9;
  %hello {
    padding-left: 15px;
    font-size: 5rem;
-   color: transparent;
-   -webkit-text-stroke-width: 2px;
-   -webkit-text-stroke-color: $neon-color;
-   font-family: 'Neon Lights', sans-serif;
-   text-shadow: 1px 1px 2px $shadow-color, 0 0 0.2em lighten($shadow-color, 10%), 0 0 1em lighten($shadow-color, 20%), 0px -15px 20px lighten($shadow-color, 20%);
+   color: lighten($shadow-color, 25%);
+   opacity: 0.7;
+   -webkit-text-stroke-width: 1px;
+   -webkit-text-stroke-color: $light-grey;
+   font-family: $hello-font;
+   text-shadow: 0px 0px 35px $shadow-color, 10px 0 20px $shadow-color, 0px -8px 20px $shadow-color, 0px -8px 20px $shadow-color;
  }
