--- a/css/main.css
+++ b/css/main.css
@@ -63,10 +63,10 @@ table {
 header .neonSign #hello, header .neonSign #h {
   padding-left: 15px;
   font-size: 5rem;
-  color: #ff5dd3;
+  color: #a9007b;
   opacity: 0.7;
-  -webkit-text-stroke-width: 1px;
-  -webkit-text-stroke-color: #e9e9e9;
+  -webkit-text-stroke-width: 2px;
+  -webkit-text-stroke-color: #ff5dd3;
   font-family: "Neon Lights", sans-serif;
   text-shadow: 0px 0px 35px #DC00A0, 10px 0 20px #DC00A0, 0px -8px 20px #DC00A0, 0px -8px 20px #DC00A0; }
 
@@ -148,10 +148,24 @@ header .neonSign #hello, header .neonSign #h {
 .page-content {
   flex: 1; }
 
+#triangle {
+  width: 50px;
+  height: auto;
+  -webkit-animation: bounce 2.5s;
+  animation: bounce 2.5s ease-in-out;
+  animation-iteration-count: 2;
+  -webkit-animation-delay: 4s;
+  /* Safari */
+  animation-delay: 4s; }
+
+#triangle:hover {
+  -webkit-animation: bounce 2.5s;
+  animation: bounce 2.5s ease-in-out; }
+
 nav {
   background: white;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   align-content: center;
   margin: 0 auto;
@@ -166,14 +180,13 @@ nav {
         display: block; } }
   nav a, nav span {
     font-family: "DIN Pro Condensed Regular", monospace;
-    margin-left: 20px;
     font-size: 1.5em; }
     @media screen and (min-width: 800px) {
       nav a, nav span {
         font-size: 2em; } }
 
 header {
-  width: 70%;
+  width: 100%;
   height: 100vh;
   margin: 0 auto;
   display: flex;
@@ -212,7 +225,7 @@ header {
           font-size: 8em; } }
   header .intro {
     text-align: right;
-    padding: 0 20px;
+    padding-right: 0.5em;
     font-size: 1.8em;
     min-width: 300px; }
     @media screen and (min-width: 414px) {
@@ -221,13 +234,6 @@ header {
   header a {
     align-self: center;
     margin-top: 40%; }
-    header a img {
-      animation-play-state: paused; }
-    header a img {
-      -webkit-animation: bounce 2.5s;
-      animation: bounce 2.5s ease-in-out;
-      animation-iteration-count: 2;
-      animation-play-state: playing; }
 
 .heading {
   display: flex;
@@ -236,7 +242,7 @@ header {
   align-content: center;
   width: 100%;
   margin: 25px auto;
-  max-width: 800px; }
+  max-width: 1000px; }
   @media screen and (min-width: 760px) {
     .heading h2 {
       display: none; } }
@@ -245,7 +251,7 @@ header {
   #work, #contact {
     display: flex;
     flex-flow: row nowrap;
-    max-width: 800px;
+    max-width: 1000px;
     margin: 20px auto; } }
 
 .work-content {
@@ -284,10 +290,11 @@ header {
     z-index: 999; } }
 
 @media screen and (min-width: 760px) {
-  #about {
+  #about-heading {
     display: inline;
     height: 80px;
-    font-size: 3.5em; } }
+    font-size: 3.5em;
+    width: 100%; } }
 
 .about-content {
   padding: 15px;
@@ -320,32 +327,32 @@ header {
     height: 30%;
     padding: 5px; }
 
-.icons {
-  display: flex;
-  justify-content: center;
-  margin-top: 50px;
-  border-top: 1px solid #232C33; }
-  @media screen and (min-width: 760px) {
-    .icons {
-      padding-bottom: 20px;
-      border-bottom: 1px solid #232C33; } }
-  .icons a {
-    padding: 10px 10px 0 10px; }
-  .icons #resume {
+.resume {
+  text-align: center; }
+  .resume #resume {
     align-self: center;
     font-size: 2em;
     font-family: "DIN Pro Condensed Regular", monospace;
     transition: all 0.5s ease-in-out; }
-  .icons #resume:hover {
+  .resume #resume:hover {
     color: #1944D8; }
 
 .contact-content {
   width: 100%;
-  margin: 10% 0;
+  margin: 5% 0;
   display: flex;
   flex-flow: column;
   justify-content: center;
   align-items: center; }
+  .contact-content .icons {
+    display: flex;
+    justify-content: center;
+    border-bottom: 1px solid #232C33; }
+    @media screen and (min-width: 760px) {
+      .contact-content .icons {
+        padding-bottom: 20px; } }
+    .contact-content .icons a {
+      padding: 10px 10px 0 10px; }
   .contact-content p {
     padding: 20px 10px;
     font-size: 1.2em;
