--- a/scss/layout/_contact.scss
+++ b/scss/layout/_contact.scss
@@ -1,11 +1,24 @@
 
 .contact-content {
   width: 100%;
-  margin: 10% 0;
+  margin: 5% 0;
   display: flex;
   flex-flow: column;
   justify-content: center;
   align-items: center;
+  .icons {
+    display: flex;
+    justify-content: center;
+    border-bottom: 1px solid $dark-grey;
+    @media  screen and (min-width: 760px) {
+      padding-bottom: 20px;
+      // border-bottom: 1px solid $dark-grey;
+    }
+    a {
+      padding: 10px 10px 0 10px;
+
+    }
+  }
   p {
     padding: 20px 10px;
     font-size: 1.2em;
