--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,6 +1,6 @@
 
 header {
-  width: 70%;
+  width: 100%;
   height: 100vh;
   margin: 0 auto;
   display: flex;
@@ -46,7 +46,7 @@ header {
   }
   .intro {
     text-align: right;
-    padding: 0 20px;
+    padding-right: 0.5em;
     font-size: 1.8em;
     @extend %text;
     min-width: 300px;
@@ -57,14 +57,5 @@ header {
   a {
     align-self: center;
     margin-top: 40%;
-    img {
-      animation-play-state: paused;
-    }
-    img {
-    -webkit-animation: bounce 2.5s;
-    animation: bounce 2.5s ease-in-out;
-    animation-iteration-count: 2;
-    animation-play-state: playing;
-    }
   }
 }
