--- a/scss/layout/_nav.scss
+++ b/scss/layout/_nav.scss
@@ -3,7 +3,7 @@ nav {
     // position: fixed;
   background: white;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   align-content: center;
   margin: 0 auto;
@@ -19,7 +19,7 @@ nav {
   }
   a, span {
     font-family: $font-stack;
-    margin-left: 20px;
+    // margin-left: 20px;
     font-size: 1.5em;
     @media screen and (min-width: 800px) {
       font-size: 2em;
