--- a/scss/utils/_variables.scss
+++ b/scss/utils/_variables.scss
@@ -42,10 +42,10 @@ $light-grey: #e9e9e9;
  %hello {
    padding-left: 15px;
    font-size: 5rem;
-   color: lighten($shadow-color, 25%);
+   color: darken($shadow-color, 10%);
    opacity: 0.7;
-   -webkit-text-stroke-width: 1px;
-   -webkit-text-stroke-color: $light-grey;
+   -webkit-text-stroke-width: 2px;
+   -webkit-text-stroke-color:lighten($shadow-color, 25%) ;
    font-family: $hello-font;
    text-shadow: 0px 0px 35px $shadow-color, 10px 0 20px $shadow-color, 0px -8px 20px $shadow-color, 0px -8px 20px $shadow-color;
  }
